# satir

./: Cargo.toml  README.md
src/: lib.rs  main.rs  tagged.rs
src/cdcl/: core.rs  env.rs  mod.rs  watchlist.rs
src/cdcl/constraint/: clause.rs  mod.rs
src/satir/: clause.rs  constraint.rs  core.rs  dpll.rs  dplls.rs  mod.rs  tagged.rs
src/satir/parse/: dimacs.rs
src/tagged/: mod.rs
