[package]
name = "satir"
version = "0.1.0"
authors = ["Tristan Ravitch <tristan@ravit.ch>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "satir"
path = "src/main.rs"

[lib]
name = "satirlib"
path = "src/lib.rs"

[dependencies]
slice-dst = "^1.5"
combine = "^4"
structopt = "^0.3"
anyhow = "^1"
priority-queue = "^1.2"
ordered-float = "^2"
thiserror = "^1"
